--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,5 +1,5 @@
 body{
-  max-width: 1080px;
+  max-width: 1000px;
   margin: auto;
 }  
   
@@ -13,4 +13,11 @@ body{
   font-family: var(--font-conteudo);
   font-weight: 400;
   font-size: 2rem;
+}
+
+@media(max-width: 1050px){
+  body{
+    max-width: 900px;
+    margin: auto;
+  }
 }
