--- a/src/css/reader.css
+++ b/src/css/reader.css
@@ -1,4 +1,4 @@
-.header{
+.navegacao{
   display: flex;
   justify-content: space-between;
   padding: 40px 0 50px;
@@ -6,14 +6,14 @@
   flex-wrap: wrap;
 }
 
-.menu{
+.menu-desktop{
   display: flex;
   align-items: center;
   gap: 100px;
   font-family: var(--font-conteudo);
 }
 
-.menu li a{
+.menu-desktop li a{
   color: var(--black);
 }
 
@@ -27,3 +27,107 @@
   font-weight: 600;
   cursor: pointer;
 }
+ 
+.header .menu{
+  display: none;
+  width: 60px;
+  height: 60px;
+  align-self: flex-end;
+}
+
+.header nav label{
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.header .hamburguer{
+  background-color: #000;
+  position: relative;
+  display: block;
+  width: 30px;
+  height: 2px;
+  top: 29px;
+  left: 15px;
+  transition: 0.5s ease-in-out;
+}
+
+.header .hamburguer:before, .header .hamburguer:after{
+  background-color: #000;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition: 0.2s ease-in-out;
+}
+
+.header .hamburguer:before{
+  top: -10px;
+}
+
+.header .hamburguer:after{
+  bottom: -10px;
+}
+
+.header input{
+  display: none;
+}
+
+.header input:checked ~ label .hamburguer{
+  transform: rotate(45deg);
+}
+
+.header input:checked ~ label .hamburguer:before{
+  transform: rotate(90deg);
+  top: 0;
+}
+
+.header input:checked ~ label .hamburguer:after{
+  transform: rotate(90deg);
+  bottom: 0;
+}
+
+@media(max-width: 950px){
+  .navegacao{
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .menu-desktop{
+    justify-content: center;
+    margin-top: 50px;
+  }
+}
+
+@media(max-width: 700px){
+  .header .menu{
+    display: block;
+  }
+
+  .header nav input:checked ~ ul{
+    display: block;
+  }
+
+  .header nav{
+    position: absolute;
+    top: 40px;
+    right: 20px;
+    z-index: 1;
+  }
+
+  .header nav ul{
+    display: none;
+    background-color: #000;
+    padding: 20px;
+    border-radius: 10px;
+  }
+
+  .header nav li a{
+    display: block;
+    color: #FFF;
+    text-align: center;
+    padding: 20px;
+  }
+}
+
