--- a/src/css/populares.css
+++ b/src/css/populares.css
@@ -7,6 +7,39 @@
 
 .comidas{
     display: flex;
-    gap: 120px;
-    margin-top: 50px;
+    gap: 100px;
+    margin-top: 150px;
+}
+
+.frango, .apimentado, .tradicional{
+    background-color: var(--white-200);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    min-height: 350px;
+    text-align: center;
+    font-family: var(--font-titulo);
+    border-radius: 10px;
+    position: relative;
+}
+
+.nome-prato{
+    font-size: 2.5rem;
+    font-weight: 500;
+}
+
+.descricao-prato{
+    font-family: var(--font-conteudo);
+    font-size: 1.1rem;
+    padding: 10px 60px;
+}
+
+.preco-prato{
+    font-size: 2.5rem;
+    font-weight: 500;
+}
+
+.img-pratos{
+    position: absolute;
+    top: -100px;
 }
