--- a/src/css/global.css
+++ b/src/css/global.css
@@ -9,6 +9,12 @@ body{
   font-weight: 600;
 }
 
+.titulo-2{
+  font-family: var(--font-titulo);
+  font-size: 2.5rem;
+  font-weight: 500;
+}
+
 .texto{
   font-family: var(--font-conteudo);
   font-weight: 400;
