--- a/src/css/input.css
+++ b/src/css/input.css
@@ -86,5 +86,36 @@ button a {
   .search-local button:hover {
     letter-spacing: 0.5rem;
 }
+
+@media (max-width: 950px) {
+    .input{
+        margin: 25px;
+    }
+
+    .search-local {
+      padding-left: 0;
+      column-gap: 0.25rem;
+    }
+  
+    .search-local button {
+      width: 10rem;
+    }
+  
+    button a {
+      display: none;
+    }
+  
+    .search-local button .search-icon {
+      display: block;
+      margin-inline: auto;
+      color: var(--white);
+      font-size: 3rem;
+    }
+  
+    input[type="text"]::placeholder {
+      font-size: 1.7rem;
+    }
+  }
+  
   
   
