--- a/src/css/location.css
+++ b/src/css/location.css
@@ -14,6 +14,7 @@
 @media(max-width: 950px){
     .location{
         margin-top: 50px;
+        margin-bottom: 150px;
     }
 
     .location .titulo{
